--- a/.env
+++ b/.env
@@ -17,10 +17,10 @@ BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
-dgShowLocalGraph=false
-dgShowInlineTitle=false
+dgShowLocalGraph=true
+dgShowInlineTitle=true
 dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=false
+dgShowToc=true
 dgLinkPreview=false
 dgShowTags=false
